<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:layout_height="500dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/myMapContainer"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

            </FrameLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="4"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:layout_height="70dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/telLL"
                        android:weightSum="3"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:srcCompat="@android:drawable/sym_action_call"
                            android:id="@+id/phoneIV"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:contentDescription="@string/phone_logo"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:text="@string/call"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/callTV"
                            android:textColor="@android:color/black"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/saveLL"
                        android:weightSum="3"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:srcCompat="@drawable/save"
                            android:id="@+id/saveIV"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:contentDescription="@string/save_logo"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:text="@string/save"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:id="@+id/saveTV"
                            android:gravity="center_horizontal"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/shareLL"
                        android:weightSum="3"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:srcCompat="@android:drawable/ic_menu_share"
                            android:id="@+id/shareIV"
                            android:layout_weight="2"
                            android:layout_gravity="center"
                            android:contentDescription="@string/share_logo"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:text="@string/share"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/shareTV"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            android:gravity="center_horizontal" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/webLL"
                        android:layout_margin="5dp"
                        android:weightSum="3"
                        android:visibility="visible"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:srcCompat="@drawable/web"
                            android:id="@+id/webIV"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:contentDescription="@string/web_logo"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:text="@string/website"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/webTV"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            android:gravity="center_horizontal" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                android:elevation="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:weightSum="5"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:weightSum="4"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            app:srcCompat="@drawable/address"
                            android:id="@+id/imageView2"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/address_string_phone_logo"
                            android:layout_height="30dp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/addressTV"
                            android:layout_weight="3.5"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:id="@+id/PhoneLL">

                        <ImageView
                            android:layout_width="0dp"
                            app:srcCompat="@drawable/phone"
                            android:id="@+id/imageView3"
                            android:layout_weight="0.5"
                            android:layout_gravity="center"
                            android:contentDescription="@string/phone_logo"
                            android:layout_height="30dp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:id="@+id/telTV"
                            android:layout_weight="3.5"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|center"
                        android:layout_marginBottom="5dp">

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:id="@+id/ratingBar2"
                            android:layout_gravity="top|center"
                            android:numStars="5"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_height="wrap_content"
                            android:minHeight="10dp" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                android:elevation="10dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/placeIV"
                    android:layout_margin="20dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


