<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingEnd="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingStart="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        card_view:cardElevation="20dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        card_view:cardCornerRadius="15dp"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="4"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="2dp"
                android:paddingBottom="2dp">

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:layout_weight="3"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|start"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:maxLines="2" />

                <TextView
                    android:text="@string/distance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/distanceTV"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="normal|bold"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center_vertical|end"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:weightSum="2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:weightSum="2">

                    <TextView
                        android:text="@string/address"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/addressTV"
                        android:layout_weight="1.5"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:paddingEnd="7dp"
                        android:paddingLeft="7dp"
                        android:paddingRight="7dp"
                        android:paddingStart="7dp"
                        android:gravity="center_vertical|start"
                        android:paddingTop="2dp"
                        android:ellipsize="end"
                        android:maxLines="2" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center">
                        <!--
                                                <TextView
                                                    android:text="@string/rate"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/rateTV"
                                                    android:layout_gravity="center"
                                                    android:textSize="16sp"
                                                    android:textColor="@android:color/black"
                                                    android:layout_marginRight="3dp"
                                                    android:layout_marginEnd="3dp" />

                                                <ImageView
                                                    android:layout_width="30dp"
                                                    android:layout_height="match_parent"
                                                    card_view:srcCompat="@drawable/star"
                                                    android:id="@+id/rateIV"
                                                    android:layout_gravity="top|center" />
                                                    -->
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ratingBar"
                            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                            android:numStars="5"
                            android:minHeight="30dp" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    android:layout_weight="0.5"
                    android:layout_gravity="center" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
